terminal: scroll pageUp/Down keybindings

--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -13,6 +13,12 @@
       "command": "paste",
       "keys": "ctrl+v"
     },{
+      "command": "scrollUpPage",
+      "keys": "shift+pageup"
+    },{
+      "command": "scrollDownPage",
+      "keys": "shift+pagedown"
+    },{
       "command": "newTab",
       "keys": "ctrl+t"
     },{
