--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -46,7 +46,7 @@
   ],
   "defaultProfile": "{2c4de342-38b7-51cf-b940-2309a097f518}",
   "profiles": {
-    "defaults": {},
+    "defaults": { "colorScheme": "Dracula" },
     "list": [
       {
         "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
@@ -70,6 +70,29 @@
     ]
   },
   "schemes": [
+    {
+      "name": "Dracula",
+      "cursorColor": "#F8F8F2",
+      "selectionBackground": "#44475A",
+      "background": "#282A36",
+      "foreground": "#F8F8F2",
+      "black": "#21222C",
+      "blue": "#BD93F9",
+      "cyan": "#8BE9FD",
+      "green": "#50FA7B",
+      "purple": "#FF79C6",
+      "red": "#FF5555",
+      "white": "#F8F8F2",
+      "yellow": "#F1FA8C",
+      "brightBlack": "#6272A4",
+      "brightBlue": "#D6ACFF",
+      "brightCyan": "#A4FFFF",
+      "brightGreen": "#69FF94",
+      "brightPurple": "#FF92DF",
+      "brightRed": "#FF6E6E",
+      "brightWhite": "#FFFFFF",
+      "brightYellow": "#FFFFA5"
+    },
     {
       "background": "#0C0C0C",
       "black": "#0C0C0C",
